# Ros2_ARM

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/robot/share/ament_index/resource_index/package_run_dependencies/: robot
install/robot/share/robot/: local_setup.sh  package.sh
install/robot/share/robot/config/: ros2_controllers.yaml
install/robot/share/robot/launch/: gazebo.launch.py
install/robot/share/robot/meshes/: link_3.stl  link_4.stl  link_5.stl
install/robot/share/robot/rviz/: config.rviz
install/robot/share/robot/urdf/: robot.xacro
install/robot_moveit/share/robot_moveit/: local_setup.sh  package.sh  package.xml
install/robot_moveit/share/robot_moveit/config/: robot.srdf  ros2_controllers.yaml
install/robot_moveit/share/robot_moveit/launch/: demo.launch.py  spawn_controllers.launch.py
log/: latest_build
robot_description_moveit/config/: moveit_controllers.yaml  ros2_controllers.yaml
robot_description_moveit/launch/: demo.launch.py
src/astra_camera/include/astra_camera/: constants.h  ros_param_backend.h
src/astra_camera/include/astra_camera/point_cloud_proc/: point_cloud_xyzrgb.h
src/astra_camera/src/: ros_param_backend.cpp
src/pick_and_place/: package.xml  setup.py
src/pick_and_place/launch/: run_all.launch.py
src/pick_and_place/pick_and_place/: simple_pick_place.py
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: display.launch.py
src/robot/meshes/: base_link.stl  link_2.stl
src/robot/urdf/: gazebo.xacro  robot.ros2_control.xacro  robot.xacro
src/robot/worlds/: arm_on_the_table.sdf
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: moveit_gazebo.launch.py  moveit_sim.launch.py  test_trajectory.launch.py
src/robot_control/: CMakeLists.txt  package.xml  robot_control_plugins.xml
src/robot_control/config/: ros2_controllers.yaml
src/robot_control/include/robot_control/: robot_hardware.hpp
src/robot_control/launch/: control_read.lannch.py
src/robot_control/src/: plugin_export.cpp  robot_hardware.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: joint_names_robot.yaml
src/robot_description/launch/: display.launch.py  gazebo.launch.py  random_wood_blocks.py
src/robot_description/meshes/: gripper_l.stl  link_6.stl
src/robot_description/urdf/: gazebo.xacro  materials.xacro  robot.ros2_control.xacro  robot.urdf.xacro  robot.xacro  robot_macro.xacro  sensors.xacro
src/robot_description/worlds/: arm_on_the_table.sdf
src/robot_description/worlds/table/: arm_on_the_table.sdf  table_top.mtl
src/robot_description/worlds/wood_block/: model.config  wood_model.sdf
src/robot_description/worlds/wood_block/meshes/: wood_cube.mtl
src/robot_gui/: package.xml  setup.py
src/robot_gui/launch/: pose_goal_gui.py
src/robot_gui/robot_gui/: commander_gui.py
src/robot_hardware/: CMakeLists.txt  package.xml
src/robot_hardware/include/: fas_protocol.hpp  robot_hw_node.hpp  serial_port.hpp  types.hpp
src/robot_hardware/src/: fas_protocol.cpp  main.cpp  robot_hw_node.cpp  serial_port.cpp
src/robot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_moveit/config/: moveit_controllers.yaml  ompl_planning.yaml  robot.ros2_control.xacro  robot.srdf  ros2_controllers.yaml
src/robot_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_test/: package.xml  setup.py
src/vision_tracking/: setup.cfg  setup.py
src/vision_tracking/launch/: cam_capture_gui.py  test_obb.py  yolo_3d_gui.py  yolo_hough_parallelogram.py  yolo_minarearect_yaw.py  yolo_parallelogram_center.py  yolo_ros2_realtime.py  yolo_yaw_center.py
src/vision_tracking/vision_tracking/: sift_yolo_tracker_node.py  test.py  yolo_publisher_node.py
(+1 files in other folders)
