<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>ros2_control hardware interface and bringup for robot (sim/real)</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ros2_control -->
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- for YAML params -->
  <depend>yaml_cpp_vendor</depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="robot_control_plugins.xml"/>
  </export>
</package>
