<?xml version="1.0"?>
<package format="3">
  <name>robot_hardware</name>
  <version>0.0.1</version>
  <description>ROS2 C++ hardware bridge over serial (FAS protocol placeholder)</description>
  <maintainer email="you@todo.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>ament_index_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
